--- a/README
+++ b/README
@@ -2,13 +2,44 @@ For Licensing and copying information, see the file COPYING.
 
 PhonePledge is an application for fundraising events. The application
 allows you to manage and accept donation pledges via SMS, which can
-then be displayed live on, e.g., a big projector screen.
+then be displayed live on, e.g., a big projector screen. PhonePledge
+can also display a slide show with images at times when there are no
+incoming pledges.
 
-PhonePledge uses Google Voice as the backend, and thus requires a
+PhonePledge uses Google Voice as the back-end, and thus requires a
 Google Voice account. The Google Voice connectivity is provided by the
 unofficial Java API library found at:
 
 http://code.google.com/p/google-voice-java/
+
+Overview
+========
+
+PhonePledge consists of the 'control' window and the pledge 'display'
+window. The control window allows a person to manage and selectively
+accept donation pledges that arrive via SMS to a Google Voice account,
+while the display window will show the "accepted" pledges. Accepted
+pledges are put in a queue for being displayed one-at-a-time in the
+display window. When the queue is empty (e.g., at times when no new
+pledges are arriving or being accepted), the display window will flip
+into "slide" mode, where it loops through a set of images that the
+user has provided (for, e.g., promotion purposes). Thus, the display
+window operates in two modes: "pledge" mode or "display" mode. These
+modes are typically set automatically based on the state of the pledge
+display queue, but can also be overridden via the control window. For
+instance, setting pledge mode when the queue is empty (e.g., when the
+app has automatically switched to slide mode) will repopulate the
+pledge display queue with all previously accepted pledges and loop
+through them again.
+
+PhonePledge can send an automatic reply (e.g., a thank you note) to
+the originator of all incoming donation pledges. The default reply
+message can be changed using a configuration file as described
+below. The reply functionality must be enabled after the program has
+started, as it would otherwise send replies to all SMS originators
+every time it downloads the list of SMSes from the Google Voice
+account on startup. Use the reply functionality with caution---you do
+not want to spam your donors with lots of duplicate thank you notes.
 
 Building
 ========
@@ -28,12 +59,12 @@ file. Otherwise, run 'java -jar phonepledge.jar' in a terminal window.
 Configuration
 =============
 
-The PhonePledge program consists of the 'control' window and the
-pledge 'display' window. Each of these can be configured separately
-using two configuration files: control.properties and
-display.properties, respectively. These should be put in the same
-directory as the phonepledge.jar to be detected. The configuration
-file format is based on key-value pairs in the form "key=value" pairs.
+Settings related to the control window and display window are
+configured separately using two configuration files:
+control.properties and display.properties. These should be put in the
+same directory as the phonepledge.jar file. The configuration file
+format is based on key-value pairs in the form "key=value" (one per
+line).
 
 The 'display.properties' configuration file supports the following
 key-value pairs:
@@ -100,14 +131,30 @@ GoogleVoicePassword=TEXT
 Changing the logos
 ------------------
 
-- Put logo.png and ticker.png in phonepledge.jar directory.
+There are two logos displayed in the application. One large logo in
+the lower left corner (logo.png) and one small that is displayed in
+the pledge ticker (ticker.png). To change these, put a logo.png and a
+ticker.png in phonepledge.jar directory. The corner logo should
+preferably have the same background as the pledge window's (white by
+default) and the ticker logo should have the same color as the ticker
+field (RGB values 0,0,80 by default). However, colors can be user
+defined as described above.
 
-The logo in the lower left corner and in the ticker can be changed by
-placing the files logo.png and/or ticker.png in the same directory as
-the phonepledge.jar file. The corner logo should preferably have the
-same background as the pledge window's (white by default) and the
-ticker logo should have the same color as the ticker field (RGB values
-0,0,80 by default).
+Adding Slides
+=============
+
+Slides that are to be displayed during times of little pledge activity
+should be put is a slides subdirectory in the same directory as the
+phonepledge.jar. The slides should be image files (most common formats
+work) and they will be shown in the order of their file names. So, in
+order to force a specific order it is convenient to name the files,
+e.g., 1.jpg, 2.jpg, etc.
+
+Make sure the slide images are of a decent resolution and quality so
+that they look good on a big screen. PhonePledge will rescale them
+automatically to fit the display area, so they can be quite
+large. However, do not make them unnecessarily large, as PhonePledge
+loads them dynamically and may slow down in case they are really huge.
 
 Keyboard Shortcuts
 ==================
